--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "type": "git",
     "url": "git@github.com:jameslnewell/eslint-config-jameslnewell.git"
   },
-  "scripts": {
-    "es5.ok": "eslint -c jameslnewell/es5 example/es5/ok.js",
-    "es5.err": "eslint -c jameslnewell/es5 example/es5/err.js",
-    "es6.ok": "eslint -c jameslnewell/es6 example/es6/ok.js",
-    "es6.err": "eslint -c jameslnewell/es6 example/es6/err.js",
-    "react.ok": "eslint -c jameslnewell/react example/react/ok.js",
-    "react.err": "eslint -c jameslnewell/react example/react/err.js"
-  },
-  "license": "MIT",
   "dependencies": {
-    "babel-eslint": "^4.1.4",
+    "eslint-plugin-import": "^0.9.1",
     "eslint-plugin-react": "^3.7.1"
-  }
+  },
+  "devDependencies": {
+    "eslint": "^1.9.0"
+  },
+  "scripts": {
+    "es5.ok": "eslint --no-eslintrc example/es5/ok.js",
+    "es5.err": "eslint --no-eslintrc example/es5/err.js",
+    "es6.ok": "eslint example/es6/ok.js",
+    "es6.err": "eslint --no-eslintrc eslint-config-jameslnewell/es6 example/es6/err.js",
+    "react.ok": "eslint --no-eslintrc eslint-config-jameslnewell/react example/react/ok.js",
+    "react.err": "eslint --no-eslintrc eslint-config-jameslnewell/react example/react/err.js"
+  },
+  "license": "MIT"
 }
