fix bug where import linter wasn't finding *.jsx files

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,11 @@
 {
+  "settings": {
+    "import/resolve": {
+      "extensions": [
+        ".js",
+        ".jsx"
+      ]
+    }
+  },
   "extends": "jameslnewell"
 }
