--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-jameslnewell",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "ESLint config for how I like to format code - readable with whitespace and semicolons.",
   "keywords": [
     "eslint",
@@ -13,6 +13,9 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:jameslnewell/eslint-config-jameslnewell.git"
+  },
+  "peerDependencies": {
+    "eslint": "^1.9.0"
   },
   "dependencies": {
     "eslint-plugin-import": "^0.11.0",
