--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-jameslnewell",
-  "version": "0.4.4",
+  "version": "0.5.0",
   "description": "ESLint config for how I like to format code - readable with whitespace and semicolons.",
   "keywords": [
     "eslint",
@@ -22,7 +22,8 @@
     "eslint-plugin-react": "^3.7.1"
   },
   "devDependencies": {
-    "eslint": "^1.9.0"
+    "eslint": "^1.9.0",
+    "eslint-plugin-mocha": "^1.1.0"
   },
   "scripts": {
     "es5.ok": "eslint --no-eslintrc example/es5/ok.js",
