--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-jameslnewell",
-  "version": "2.0.0-preview.4",
+  "version": "2.0.0-preview.5",
   "description": "ESLint config for how I like to format code - readable with whitespace and semicolons.",
   "keywords": [
     "eslint",
@@ -15,6 +15,7 @@
     "url": "git@github.com:jameslnewell/eslint-config-jameslnewell.git"
   },
   "dependencies": {
+    "babel-eslint": "^7.1.1",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-mocha": "^4.5.1",
     "eslint-plugin-react": "^6.3.0"
