--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-jameslnewell",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "ESLint config for common gotch'yas for different JS environments.",
   "keywords": [
     "eslint",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "babel-eslint": "^7.1.1",
+    "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-react": "^7.1.0"
