--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": "jameslnewell/eslint-config-jameslnewell",
   "peerDependencies": {
-    "eslint": "^2.0.0 || ^3.0.0 || ^4.0.0"
+    "eslint": "^2.0.0 || ^3.0.0 || ^4.0.0 || ^5.0.0"
   },
   "dependencies": {
     "babel-eslint": "^8.2.1",
